 2012-09-05 19:31  hvlad 
   M src/jrd/validation.cpp
Fixed bug CORE-3916 : gfix & "Index x is corrupt (missing entries) in table ..." all indexes on large tables

 2012-09-04 08:50  hvlad 
   M src/jrd/tra.cpp
   M src/jrd/trace/TraceJrdHelpers.h
   M src/jrd/vio.cpp
Improvement CORE-3656 : Support for sweep information in Trace API.
Fixed case when sweep cleaned up relation with all records deleted but corresponding event was missed in trace log.

 2012-08-31 10:34  alexpeshkoff 
   M src/jrd/isc_sync.cpp
Better diagnostic (CORE-3786)

 2012-08-31 10:27  alexpeshkoff 
   M src/remote/inet.cpp
Backported fix for CORE-3912: segfault in superclassic

 2012-08-29 16:22  dimitr 
   M src/jrd/btr.cpp
   M src/jrd/btr.h
   M src/jrd/ods.h
Restored the ODS level compatibility with v2.5.1 index keys, while using the "old good" index key format in new indices. It allows to claim that CORE-3675 and CORE-3853 are fixed (after migration via backup/restore) but still operate almost correctly with keys created in v2.5.1. This is *much* better than silently returning wrong data if a v2.5.1 database is used with v2.5.2 without backup/restore.

 2012-08-29 12:34  alexpeshkoff 
   M src/jrd/ibase.h
   M src/jrd/utl.cpp
   M src/jrd/utl_proto.h
Use better name from trunk for CORE-3911

 2012-08-29 11:35  alexpeshkoff 
   M src/jrd/ibase.h
   M src/jrd/utl.cpp
   M src/jrd/utl_proto.h
Fixed CORE-3911: API entrypoints Bopen and BLOB_open are not visible on Darwin

 2012-08-29 11:30  alexpeshkoff 
   M src/jrd/ThreadStart.cpp
Fixed CORE-3740: SELECT using IN list with >413 elements causes crash on Mac

 2012-08-28 18:00  dimitr 
   M src/jrd/tra.cpp
Misc.

 2012-08-28 17:58  dimitr 
   M src/jrd/jrd.cpp
   M src/jrd/tra.cpp
   M src/jrd/tra_proto.h
Fixed the broken (working as no-op) sweep in SuperServer.
Minor cleanup and simplification.

 2012-08-24 13:30  alexpeshkoff 
   M src/jrd/isc_sync.cpp